# plant-tracker

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  plant-traker.service  pyproject.toml  run.py  run_debug.py  tox.ini  wsgi.py
plant_tracker/: __init__.py  app.py  config.py
plant_tracker/core/: db.py  etl.py  geodata.py  utils.py
plant_tracker/forms/: __init__.py  add_family.py  add_geodata.py  add_image.py  add_maintenance.py  add_name.py  add_observation.py  add_plant.py  add_scheduled_maintenance.py  add_species.py  add_watering.py  confirm_delete.py  helper.py
plant_tracker/model/: __init__.py  base.py  image.py  logs.py  maps.py  plant.py  species.py
plant_tracker/routes/: altname.py  family.py  geodata.py  helpers.py  image.py  main.py  maintenance.py  observation.py  plants.py  scheduled_maintenance.py  species.py  watering.py
plant_tracker/static/css/: form.css  main.css  map.css  table.css
plant_tracker/templates/: base.html  base.jinja  index.html  index.jinja
plant_tracker/templates/errors/: 403.jinja  404.html  500.jinja
plant_tracker/templates/macros/: form.html  form.jinja  image_carousel.jinja  svg.html  svg.jinja  table_builder.html  table_builder.jinja
plant_tracker/templates/pages/: confirm.html  confirm.jinja
plant_tracker/templates/pages/altname/: add-altname.html  add-altname.jinja  list-altname.jinja
plant_tracker/templates/pages/family/: add-family.jinja  family-info.html  family-info.jinja  list-families.html  list-families.jinja
scripts/: drop_recreate.py  import_data.py
(+25 files in other folders)
