[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "plant_tracker"
version = '0.0.6'
description = "Flask web app for tracking plant maintenance"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/plant-tracker'
packages = [
    { include = 'plant_tracker' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.11"
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }
gunicorn = "^21"
loguru = "^0"
Flask = "^3"
Flask-CORS = "^4"
Flask-SQLAlchemy = "^3"
Flask-WTF = "^1"
GeoAlchemy2 = "^0"
pandas = "^2"
psycopg2 = "^2"
requests = "^2"
shapely = "^2"
sqlalchemy = "^2"
WTForms = "^3"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^3"
pytest = "^7"
pytest-cov = "^4"
flake8 = "^6"
tox = "^4"

[tool.poetry.extras]
test = ["pytest"]

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']
